# CaviDAC

./: .gitignore  2.txt  GUI.ui  README.md  RUN_CALCULATION.py  app.py  calculation.py  calix.ipynb  ddp_1439.err  final_test.ipynb  molecule_volume_calculator.ui  pyproject.toml  requirements.txt  results.csv  run_calc.slm  test_new_methods.ipynb  visualization.py
CalixVolApp/GUI/: app.py
CalixVolApp/calculation/: OLD_calculation.py  calculation.py  spatial.py  visualization.py
CalixVolApp/data/: 7.txt
CalixVolApp/data/molecules/: 18-краун-6.txt  5.txt  6.txt
CalixVolApp/data/molecules/calix/: 1.txt  10.txt  11.txt  12.txt  14.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
app/: calculation.py  visualization.py
cavidac/: __init__.py  constants.py
cavidac/geometry/: spatial.py  volume.py
cavidac/gui/: app.py
cavidac/io/: reader.py  vdw_provider.py
cavidac/visualization/: molecule_data.py  plots.py
data/: 4.txt  9.txt
data/molecules/: 10.txt
data/molecules/txt_calix/: 11.txt
data/vdw/: vdw_colors.json  vdw_radius.json
notebooks/: inference.ipynb  inference_2.ipynb  param_kvfinder.csv  results.ipynb  results_cavidac.ipynb  results_kvfinder.ipynb  results_pywindow.ipynb  visualization.ipynb
results/CaviDAC/: calc_volumes_cavidac.csv
results/CaviDAC/exp_with_grid_res/: time_s_vs_grid_res.csv  vol_vs_grid_res.csv
results/pyKVFinder/: calc_volumes_kvfinder.csv
results/pywindow/: calc_volumes_pywindow.csv
tests/: conftest.py  test_molecule_reader.py  test_spatial.py  test_vdw_provider.py  test_volume_estimator.py
(+7 files in other folders)
