[project]
name = "cavidac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pykvfinder>=0.8.3",
    "pyqt5>=5.15.11",
    "pytoml>=0.1.21",
    "pywindowx>=2025.9.29.0",
    "scipy>=1.16.2",
    "tqdm>=4.67.1",
]
