[project]
name = "cavidac"
version = "0.1.0"
description = "Computational prediction of cavity volumes in calixarene molecules using tessellation and divide-and-conquer algorithms"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "pyqt5>=5.15.11",
    "scipy>=1.16.2",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
notebooks = [
    "ipykernel>=6.30.1",
    "pandas>=2.3.3",
    "pykvfinder>=0.8.3",
    "pytoml>=0.1.21",
    "pywindowx>=2025.9.29.0",
]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
